--- a/site/static/css/src/errors.scss
+++ b/site/static/css/src/errors.scss
@@ -1,6 +1,14 @@
+@font-face {
+  font-family: 'Open Sans';
+  src: url('/static/font/Open_Sans/OpenSans-Regular.ttf')  format('truetype');
+}
+
 body {
 	padding:0;
 	margin:0;
+	font-family: 'Open Sans', sans-serif;
+
+	/*
 	font-family: -apple-system,
 			 BlinkMacSystemFont,
 			 "Segoe UI",
@@ -11,6 +19,7 @@ body {
 			 "Open Sans",
 			 "Helvetica Neue",
 			 sans-serif;
+	*/
 }
 
 .container {
