--- a/site/static/css/src/index.scss
+++ b/site/static/css/src/index.scss
@@ -11,6 +11,13 @@
 	animation: pop-enter $time ease-out $delay 1 forwards;
 }
 
+@font-face {
+    font-family: 'Open Sans';
+	src:url('/static/font/sans/opensans-regular.woff2') format('woff2'),
+		url('/static/font/sans/opensans-regular.woff') format('woff'),
+    	url('/static/font/sans/opensans-regular.ttf') format('truetype'),
+    	url('/static/font/sans/opensans-regular.eot') format('embedded-opentype');
+}
 
 /* mobile breakpoints */
 $mobile_width:500px;
@@ -18,17 +25,16 @@ $mobile_width:500px;
 body {
 	padding:0;
 	margin:0;
-
-	font-family: -apple-system,
-			 BlinkMacSystemFont,
-			 "Segoe UI",
-			 Roboto,
-			 Oxygen-Sans,
-			 Ubuntu,
-			 Cantarell,
-			 "Open Sans",
-			 "Helvetica Neue",
-			 sans-serif;
+	font-family:'Open Sans',
+				-apple-system,
+			 	BlinkMacSystemFont,
+			 	"Segoe UI",
+			 	Roboto,
+			 	Oxygen-Sans,
+			 	Ubuntu,
+			 	Cantarell,
+			 	"Helvetica Neue",
+			 	sans-serif;
 
 	background-color: #faf8f6;
 }
@@ -216,6 +222,10 @@ body {
 			@media screen and (max-width: $mobile_width) {
 				min-width:10px;
 			}
+		}
+
+		.category-input {
+			width:100%;
 		}
 
 		.search-submit {
