--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -83,12 +83,21 @@
 					<table>
 						<tr>
 							<td>Source:</td>
-							<td aria-label="news source"><a href="{{ article.link }}" target="_blank" rel="noopener">{{ article.get_label() }}</a></td>
+							<td aria-label="news source"><a href="{{ article.link }}" target="_blank" rel="noopener">{{ article.source }}</a></td>
+						</tr>
+						<tr>
+							<td>Author(s):</td>
+							<td aria-label="article author">{{ article.author if article.author else 'unknown' }}</td>
 						</tr>
 						<tr>
 							<td>Fetched:</td>
 							<td aria-label="date fetched">{{ article.fetched.strftime('%Y-%m-%d') }}</td></tr>
 					</table>
+				</div>
+
+				<div class="block" role="navigation">
+					<div class="header">Navigation</div>
+					<a href="javascript:history.back()" class="item">< Back</a>
 				</div>
 
 			</div>
