--- a/site/templates/menu.html
+++ b/site/templates/menu.html
@@ -25,7 +25,7 @@
 				<div class="block">
 					<div class="header">Search</div>
 					<div class="search-bar">
-						<input class="search-input" id="search-input" type="text" name="search" placeholder="Search" tooltip="search for keywords in the title or article" role="search">
+						<input name="search" class="search-input" id="search-input" tooltip="search for keywords in the title or article" type="text" placeholder="Search" role="search">
 					</div>
 				</div>
 
