pre-deploy automated commit

--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -97,7 +97,7 @@
 
 				<div class="block" role="navigation">
 					<div class="header">Navigation</div>
-					<a href="javascript:history.back()" class="item">< Back</a>
+					<a href="/" class="item">< Back</a>
 				</div>
 
 			</div>
