--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -23,19 +23,10 @@
 		</noscript>
 		<div class="container">
 
-			<div class="mobile-menu" id="js-mobile-menu" aria-hidden="true">
-				<div run="open_menu">
-					Menu
-				</div>
-				<div run="close_menu" class="current">
-					Article
-				</div>
-			</div>
-
 			<form class="menu" id="js-submit">
 
 				<input name="sources" id="js-sources-str" type="hidden">
-				<div class="sub-menu sources" onclick="expand( this );">
+				<div class="sub-menu sources menu-btn" onclick="expand( this );">
 					Sources
 					<div class="drop-down-menu expand-me">
 						<label class="option-item all">All<input type="checkbox" id="all_source_check" checked></label>
@@ -46,7 +37,7 @@
 				</div>
 
 				<input name="categories" id="js-categories-str" type="hidden">
-				<div class="sub-menu categories" onclick="expand( this );">
+				<div class="sub-menu categories menu-btn" onclick="expand( this );">
 					Categories
 					<div class="drop-down-menu expand-me">
 						<label class="option-item all">All<input type="checkbox" id="all_category_check" checked></label>
@@ -67,7 +58,7 @@
 				>
 
 				<input
-					class="submit"
+					class="submit menu-btn"
 					type="submit"
 					value="Apply"
 				>
@@ -77,15 +68,10 @@
 			<div class="main-container" id="js-titlecard-list" role="main">
 				{% for article in articles %}
 						<div class="titlecard">
-							<a href="/article/{{ article.id }}" class="title-link">{{ article.title }}</a>
-							<table class="information">
-								<tr>
-									<td>on <a href="{{ article.link }}" target="_blank" rel="noopener">{{ article.get_label() }}</a></td>
-									<td>fetched: {{ article.fetched.strftime('%Y-%m-%d') }}</td>
-									<td></td>
-									<td></td>
-								</tr>
-							</table>
+								<div class="category">{{ article.category_label }}</div>
+								<a class="title" href="/article/{{ article.id }}">{{ article.title }}</a>
+								<a class="source" href="{{ article.link }}" target="_blank" rel="noopener">{{ article.get_label() }}</a>
+								<div class="date">&nbsp; on {{ article.fetched.strftime('%Y-%m-%d') }}</div>
 						</div>
 				{% endfor %}
 			</div>
