--- a/site/static/css/src/index.scss
+++ b/site/static/css/src/index.scss
@@ -40,20 +40,12 @@ body {
 }
 
 .noscript-notification {
-	width:100vw;
-	height:40px;
-	line-height:40px;
-	text-align: center;
-	color:white;
-	background-color: #bc0000;
-	position:fixed;
-	top:0;
-	left:0;
-	font-size:1.2em;
-	font-weight:bold;
-
-	a {
-		color:white;
+	width:100%;
+	height:100%;
+	div {
+		max-width:600px;
+		margin:0 auto 0 auto;
+		padding:10px;
 	}
 }
 
