--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -15,15 +15,23 @@
 	</head>
 	<body>
 		<noscript class="noscript-notification">
-			some site functionality won't be available without <a href="http://www.enable-javascript.com/" target="_blank" rel="noopener">javascript</a> enabled.
+			<div>
+				<h2>without javascript enabled, this site won't work. Sorry about that :/</h2>
+				<p>
+					If you turned javascript off by accident, you can find instructions to turn it on
+					<a href="http://www.enable-javascript.com/" target="_blank" rel="noopener">here</a>,
+					or you can upgrade your browser <a href="http://outdatedbrowser.com" target="_blank" rel="noopener">here</a>.
+					Remember to refresh the page when you're done!
+				</p>
+			</div>
 			<style>
-				.container {
-					margin-top:40px;
+				.noscript-hide {
+					display:none;
 				}
 			</style>
 		</noscript>
 
-		<div id="js-modal-annotation" class="modal-annotation" >
+		<div id="js-modal-annotation" class="modal-annotation noscript-hide" >
 			<div class="modal-close" ref="close" onClick="modal.close()">Close</div>
 			<div class="modal-title" ref="title"></div>
 			<div class="modal-image-wrapper" ref="image"></div>
@@ -32,7 +40,7 @@
 			<div class="modal-links" ref="links"></div>
 		</div>
 
-		<div class="container">
+		<div class="container noscript-hide">
 
 				<form action="/article/{{ article.id }}" method="post" class="menu" autocomplete="off" style="position:relative">
 
@@ -109,8 +117,8 @@
 		</script>
 
 		<!-- External Javascript -->
-		<script src="/static/js/src/ui.js"></script>
-		<script src="/static/js/src/article.js"></script>
+		<script src="/static/js/ui.js"></script>
+		<script src="/static/js/article.js"></script>
 		<script src="/static/js/analytics.js"></script>
 		<!-- End External Javascript -->
 	</body>
