--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 	<head>
 		<!-- Meta Declarations -->
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<meta name="google-site-verification"
+			  content="PMGoSeUvtTJYZfrp6SFPTpjbb_6RjGqRSy3W842wlQM" />
 		<!-- End Meta Declarations -->
 
 		<title>newsbin</title>
