pre-deploy automated commit

--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -3,6 +3,9 @@
 		<!-- Meta Declarations -->
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<meta name="description"
+			  content="{{ article.content[:160] }}" />
 		<!-- End Meta Declarations -->
 
 		<title>newsbin - {{ article.title }}</title>
