--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -5,6 +5,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+		<meta name="description"
+			  content="Live annotated news from everywhere without the crap." />
+
 		<meta name="google-site-verification"
 			  content="PMGoSeUvtTJYZfrp6SFPTpjbb_6RjGqRSy3W842wlQM" />
 		<!-- End Meta Declarations -->
