pre-deploy automated commit

--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<meta name="description"
-			  content="{{ article.content[:160]|safe }}" />
+			  content="{{ summary }}" />
 		<!-- End Meta Declarations -->
 
 		<title>newsbin - {{ article.title }}</title>
