--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<meta name="description"
-			  content="Live annotated news from everywhere without the crap." />
+			  content="Live annotated news from {{ sources|length }} sources without the bullshit." />
 
 		<meta name="google-site-verification"
 			  content="PMGoSeUvtTJYZfrp6SFPTpjbb_6RjGqRSy3W842wlQM" />
