updated ui some, re-organized css, made menus close when they lose focus

--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -15,8 +15,13 @@
 		<title>newsbin</title>
 
 		<!-- External Stylesheets -->
-		<link rel="stylesheet" type="text/css" href="/static/css/index.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/stylesheet.css" />
 		<!-- End External Stylesheets -->
+
+		<!-- Inline Styles -->
+		<style>
+		</style>
+		<!-- End Inline Styles -->
 	</head>
 	<body>
 		<noscript class="noscript-notification">
@@ -98,8 +103,8 @@
 
 		<!-- External Javascript -->
 		<script src="/static/js/ui.js"></script>
-		<script src="/static/js/index.js"></script>
-		<script src="/static/js/analytics.js"></script>
+		<script src="/static/js/index.js" defer></script>
+		<script src="/static/js/analytics.js" defer></script>
 		<!-- End External Javascript -->
 	</body>
 </html>
