--- a/site/static/css/src/stylesheet.scss
+++ b/site/static/css/src/stylesheet.scss
@@ -11,6 +11,18 @@
 	animation: pop-enter $time ease-out $delay 1 forwards;
 }
 
+/* animations */
+@keyframes fade-enter {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@keyframes pop-enter {
+	0%		{ opacity:0; transform: scale(0.2); }
+	80%		{ opacity:1; transform: scale(1.1); }
+	100%	{ opacity:1; transform: scale(1); }
+}
+
 @font-face {
     font-family: 'Open Sans';
 	src:url('/static/font/sans/opensans-regular.woff2') format('woff2'),
@@ -141,20 +153,6 @@ body {
 	}
 }
 
-.about {
-	background-color: white;
-
-	.title, .content {
-		width:80%;
-		margin: 0 auto 0 auto;
-	}
-
-	.title {
-		font-size:2em;
-	}
-
-}
-
 .tooltip {
 	background-color: white;
 	border:1px solid grey;
@@ -169,7 +167,7 @@ body {
 }
 
 /* -----------------------------------------------------------------------------
-	MENU TEST */
+	MENU */
 
 .menu {
 	display:flex;
@@ -342,16 +340,207 @@ body {
 	margin-left: -180px;
 }
 
-
-
-/* animations */
-@keyframes fade-enter {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
+cite::after {
+	content:' ';
 }
 
-@keyframes pop-enter {
-	0%		{ opacity:0; transform: scale(0.2); }
-	80%		{ opacity:1; transform: scale(1.1); }
-	100%	{ opacity:1; transform: scale(1); }
+#js-eye-btn {
+	cursor:pointer;
+}
+
+.eye-toggle {
+	stroke:white;
+
+	@media screen and (max-width: $mobile_width) {
+		float: right;
+		height: 70px;
+		margin-left: auto;
+		padding: 5px;
+	}
+}
+
+.active-toggle {
+	stroke:#49beaa;
+}
+
+/* -------------------------------------------------------------------------- */
+/* Article Page */
+.article {
+	background-color: white;
+	display:block;
+
+	@media screen and (max-width: $mobile_width) {
+
+	}
+
+	.article-title {
+		font-size:2em;
+		padding:10px;
+
+		@media screen and (max-width: $mobile_width) {
+			word-wrap:break-word;
+		}
+	}
+
+	.article-content {
+		padding:0 10px 0 10px;
+
+		@media screen and (max-width: $mobile_width) {
+			font-size:1.1em;
+		}
+
+		.annotation {
+			@media screen and (max-width: $mobile_width) {
+				user-select:none;
+			}
+		}
+
+		.highlight {
+			background-color: #fbffaa;
+			cursor:pointer;
+		}
+	}
+
+	.blacklist {
+		margin: 5px 5px 5px 5px;
+		box-sizing:border-box;
+	}
+
+	.information {
+		font-size:0.75em;
+		table-layout: fixed;
+		width:100%;
+
+		@media screen and (max-width: $mobile_width) {
+			display:none;
+		}
+
+		$text_color: grey;
+		td {
+			color:$text_color;
+			background-color: #f2f2f2;
+			padding:5px 10px 5px 10px;
+		}
+
+		a {
+			color:$text_color;
+		}
+	}
+}
+
+/* -------------------------------------------------------------------------- */
+/* Modal */
+.modal-annotation {
+	max-height:90%;
+	width:400px;
+	position:fixed;
+	left:50%;
+	top:50%;
+	margin-left: -200px;
+	margin-top: -44vh;
+
+	display:none;
+	flex-direction:column;
+	align-items: center;
+	z-index:2;
+
+	background-color: white;
+	border:1px solid black;
+	box-shadow:5px 5px 5px rgba(0,0,0,0.5);
+	overflow-y: scroll;
+
+	/* transition for mobile */
+	transition:width 0.5s ease;
+
+	div, a {
+		width:90%;
+	}
+
+	.modal-close {
+		text-align:center;
+		color:white;
+		font-size:1.5em;
+		cursor:pointer;
+		font-weight:bold;
+		margin: 10px 0 10px 0;
+		background-color:#e86a6a;
+		transition: background-color 0.1s ease;
+		min-height:40px;
+		line-height:40px;
+
+		&:hover {
+			background-color:#bf4a4a;
+		}
+	}
+
+	.modal-title {
+		text-align: center;
+		font-size:2em;
+	}
+
+	.modal-image-wrapper {
+		height:auto;
+		text-align: center;
+
+		img {
+			width:100%;
+		}
+	}
+
+	.modal-data-item {
+		font-size:1.25em;
+		padding:5px 0 5px 0;
+		display:flex;
+
+		div:first-child {
+			flex:1;
+			text-align:left;
+
+			&:after {
+				content:":";
+			}
+		}
+
+		div:last-child {
+			flex:1;
+			text-align:center;
+		}
+
+	}
+
+	.modal-content {
+		padding:10px 2px 10px 2px;
+	}
+
+	.modal-links {
+		display:flex;
+
+		a {
+			flex:1;
+			display:block;
+			height:40px;
+			line-height: 40px;
+			text-align:center;
+			font-size:1.25em;
+			color:black;
+			text-decoration:none;
+			border-top: 2px solid transparent;
+			transition: border-top 0.5s ease;
+
+			&:hover {
+				border-top:2px solid black;
+			}
+		}
+
+	}
+
+	@media screen and (max-width: $mobile_width) {
+		width:95%;
+		left:50%;
+		top:10%;
+		margin-top: 0;
+		margin-left: -47.5%;
+		height:85%;
+		word-wrap: break-word;
+	}
 }
