--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -66,7 +66,7 @@
 							inaccurate<br/>annotations in this article."
 					tooltip-apply="tooltip-bottom">
 
-					<input type="button" class="menu-btn" value="Back" style="margin-right:10px;" onclick="window.history.back();">
+					<input type="button" class="back-btn menu-btn" value="Back" onclick="window.history.back();">
 
 					<svg class="eye-toggle active-toggle" id="js-eye-toggle" xmlns="http://www.w3.org/2000/svg"
 						width="24"
@@ -84,7 +84,7 @@
 					</svg>
 					<span
 						id="js-eye-btn"
-						style="width:40px;height:40px;position:absolute;right:5px;"
+						class="eye-toggle-block"
 						tooltip="toggle annotations on and off"
 						tooltip-apply="tooltip-left">
 					</span>
