pre-deploy automated commit

--- a/site/static/css/src/stylesheet.scss
+++ b/site/static/css/src/stylesheet.scss
@@ -496,6 +496,7 @@ cite::after {
 	.modal-image-wrapper {
 		height:auto;
 		text-align: center;
+		border:1px solid lightgrey;
 
 		img {
 			width:100%;
