--- a/site/static/css/src/stylesheet.scss
+++ b/site/static/css/src/stylesheet.scss
@@ -158,6 +158,7 @@ body {
 	border:1px solid grey;
 	padding:5px;
 	position:absolute;
+	z-index:100;
 
 	box-shadow: 3px 3px 5px rgba(0,0,0,0.1);
 	font-size:0.7em;
