pre-deploy automated commit

--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -14,12 +14,13 @@
 
 		<title>newsbin</title>
 
-		<!-- External Stylesheets -->
+		<!-- External Stylesheets
 		<link rel="stylesheet" type="text/css" href="/static/css/stylesheet.css" />
-		<!-- End External Stylesheets -->
+			 End External Stylesheets -->
 
 		<!-- Inline Styles -->
-		<style>
+		<style type="text/css">
+		{% include 'stylesheet.css' %}
 		</style>
 		<!-- End Inline Styles -->
 	</head>
